# Judicial-Reasoning-RL-Environment

./: .gitignore  Dockerfile  README.md  environment.py  hf_blog.md  inference.py  openenv.yaml  pyproject.toml  results.json  sarthak_files.txt  test_rubric.py  train.py  training_notebook.ipynb  upload_dataset.py
admin_tools/: colab_training_guide.py  demo.py  sarthak_cases.json  terminal_demo.py  test_reward_loop.py  train.py  training_notebook.ipynb
graders/: llm_grader.py  programmatic_grader.py
server/: __init__.py  app.py  models.py
server/ui/: index.html  police_dashboard.html  script.js  styles.css
