[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "judicial-reasoning-env"
version = "1.0.0"
description = "RL environment where an LLM agent acts as a judge, reasoning through legal cases"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.2",
    "gymnasium>=0.29.0",
    "pydantic>=2.6.0",
    "openai>=1.30.0",
    "numpy>=1.26.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "judicial_reasoning_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["judicial_reasoning_env", "judicial_reasoning_env.server"]
package-dir = { "judicial_reasoning_env" = ".", "judicial_reasoning_env.server" = "server" }
